--- a/제로초 인강/3-3강.css
+++ b/제로초 인강/3-3강.css
@@ -1,3 +1,7 @@
+*{  /*모든 태그*/
+    box-sizing: border-box;
+}
+
 .blind{
     position: absolute;
     overflow: hidden;
@@ -26,6 +30,7 @@
     background-position: -4px -10px;
     background-repeat: no-repeat; */
     background: url(./images/sp_search.png) -4px -4px no-repeat;
+    vertical-align: middle;
 }
 
 #header-search h2{
@@ -35,11 +40,19 @@
 
 #header-search fieldset{
     margin-left: 20px;
-    padding: 12px 0 12px 0;
+    padding: 12px 0 12px 0;  /*상하좌우 순서*/
     width: 521px;
     height: 49px;
     display: inline-block;
     border: 2px solid #03cf5d;
+    box-sizing: border-box; /*content 기준에서 border box로 바꾸기*/
+}
+
+#header-search fieldset input{
+    border: none;
+    padding: 0;
+    outline: none;
+    vertical-align: middle;
 }
 
 /*
