--- a/제로초 인강/7-4강.css
+++ b/제로초 인강/7-4강.css
@@ -407,3 +407,20 @@ nav ul{
     right: 0;
 
 }
+
+#main-login .login-wrapper {
+    padding: 15px 25px;
+}
+
+#main-login .login-wrapper a {
+    display: block;
+    margin-top: 12px;
+}
+
+
+#main-login .login-image{
+    background: url(./images/sp_login.png) 0 -47px no-repeat;
+    display: inline-block;
+    width: 280px;
+    height: 37px;
+}
