깃허브페이지 구현 과제

--- a/제로초 인강/7-2강.css
+++ b/제로초 인강/7-2강.css
@@ -29,6 +29,15 @@ html, body{
     margin-bottom: 8px;
 }
 
+#main-shopping ifram{
+    float: left;
+    width: 332px;
+    height: 837px;
+    background: white;
+    margin-bottom: 8px;
+}
+
+
 #main-second-block .float-left:last-child{
     width: 332px;
     vertical-align: top;
