--- a/server/apps/posts/templates/posts/posts_retrieve.html
+++ b/server/apps/posts/templates/posts/posts_retrieve.html
@@ -15,6 +15,8 @@
 <br />
 
 <hr />
+<a href="/posts/{{post.id}}/update">수정하기</a>
+
 <form action="/posts/{{post.id}}/delete" method="post">
   {%csrf_token%}
   <input type="submit" value="삭제하기" />
