--- a/myMovieReviews/server/apps/posts/templates/posts/posts_retrieve.html
+++ b/myMovieReviews/server/apps/posts/templates/posts/posts_retrieve.html
@@ -19,6 +19,6 @@
 <br />
 <small> 별점: {{post.rating}}</small>
 <br />
-<small> 별점: {{post.runningTime}}</small>
+<small> 러닝타임: {{post.runningTime}}</small>
 <br />
-<p>{{post.content}}</p>
+<p>{{post.review}}</p>
